--- a/LupusaBlazorDemos/Shared/NavMenu.razor
+++ b/LupusaBlazorDemos/Shared/NavMenu.razor
@@ -38,7 +38,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazordoughnutchart.z20.web.core.windows.net/">
+            <NavLink class="nav-link" href="PageDoughnutChart">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Doughnut Chart
             </NavLink>
         </li>
@@ -48,22 +48,22 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazorloancalculator.z20.web.core.windows.net/">
+            <NavLink class="nav-link" href="PageLoanCalculator">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Loan Calculator
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazorspreadsheet.z20.web.core.windows.net/">
+            <NavLink class="nav-link" href="PageSpreadsheet">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Spreadsheet
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazorpasswordpattern.z20.web.core.windows.net/">
+            <NavLink class="nav-link" href="PagePasswordPattern">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Password Pattern
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazortreevisualizer.z20.web.core.windows.net/">
+            <NavLink class="nav-link" href="PageTreeView">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Tree View
             </NavLink>
         </li>
