--- a/LupusaBlazorDemos/_Imports.razor
+++ b/LupusaBlazorDemos/_Imports.razor
@@ -20,9 +20,14 @@
 @using static BlazorWebSocketHelper.Classes.BwsEnums;
 
 
-@using BlazorClockSvgComponent
-@using BlazorClockCanvasComponent
-@using BlazorChessComponent
-@using BlazorGameSnakeComponent
-@using BlazorCalculatorComponent
-@using BlazorPaintComponent
+@using BlazorClockSvgComponent;
+@using BlazorClockCanvasComponent;
+@using BlazorChessComponent;
+@using BlazorGameSnakeComponent;
+@using BlazorCalculatorComponent;
+@using BlazorPaintComponent;
+@using BlazorDoughnutChartComponent;
+@using BlazorLoanCalculatorComponent;
+@using BlazorSpreadsheetComponent;
+@using BlazorPasswordPatternComponent;
+@using BlazorTreeVisualizerComponent;
