--- a/LupusaBlazorDemos/_Imports.razor
+++ b/LupusaBlazorDemos/_Imports.razor
@@ -31,3 +31,7 @@
 @using BlazorSpreadsheetComponent;
 @using BlazorPasswordPatternComponent;
 @using BlazorTreeVisualizerComponent;
+@using BlazorPerformanceChartComponent;
+@using BlazorScrollbarComponent;
+@using BlazorSplitterComponent;
+@using BlazorVirtualGridComponent;
