--- a/LupusaBlazorDemos/Shared/NavMenu.razor
+++ b/LupusaBlazorDemos/Shared/NavMenu.razor
@@ -93,7 +93,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazorperfchart.z20.web.core.windows.net/">
+            <NavLink class="nav-link" href="PagePerformanceChart">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Performance Chart
             </NavLink>
         </li>
@@ -103,22 +103,22 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazorvirtualgrid.z13.web.core.windows.net/">
+            <NavLink class="nav-link" href="PageVirtualGrid">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Virtual Grid
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazorscrollbar.z20.web.core.windows.net/">
+            <NavLink class="nav-link" href="PageScrollbar">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Scrollbar
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazorsplitter.z20.web.core.windows.net/">
+            <NavLink class="nav-link" href="PageSplitter">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Splitter
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="https://lupblazordraganddrop.z20.web.core.windows.net/">
+            <NavLink class="nav-link" href="PageDragAndDrop">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Drag and Drop
             </NavLink>
         </li>
