--- a/LupusaBlazorDemos/Demos/PageTreeView.razor
+++ b/LupusaBlazorDemos/Demos/PageTreeView.razor
@@ -3,4 +3,11 @@
 <h3>Tree View</h3>
 
 
-<CompBlazorTreeVisualizer TreeVizualizationItemCode="0"></CompBlazorTreeVisualizer>
+<button class="btn btn-primary" width="400" height="100" style="margin:5px" @onclick="@CmdButtonClick" >delete selected</button>
+
+   
+
+ 
+  <br/>
+  <br />
+<CompBlazorTreeVisualizer @ref="treeview" TreeVizualizationItemCode="0"></CompBlazorTreeVisualizer>
