--- a/LupusaBlazorDemos/Demos/PageScrollbar.razor
+++ b/LupusaBlazorDemos/Demos/PageScrollbar.razor
@@ -15,12 +15,12 @@
 <table style="margin-left:100px; margin-top:50px">
     <tr>
         <td valign="bottom" style="margin:30px">
-            <h5>@P2</h5>
+            <h5 style="user-select:none;">@P2</h5>
 
             <CompBlazorScrollbar @ref="CompBlazorScrollbar2" bsbSettings="bsbSettings2" ReactOnParentRefresh="@FirtsLoad"></CompBlazorScrollbar>
         </td>
         <td valign="top" style="margin:30px">
-            <h5>@P1</h5>
+            <h5 style="user-select:none;">@P1</h5>
 
             <CompBlazorScrollbar @ref="CompBlazorScrollbar1" bsbSettings="bsbSettings1" ReactOnParentRefresh="@FirtsLoad"></CompBlazorScrollbar>
         </td>
