--- a/LupusaBlazorDemos/Demos/PageTreeView.razor
+++ b/LupusaBlazorDemos/Demos/PageTreeView.razor
@@ -5,7 +5,7 @@
 
 <button class="btn btn-primary" width="400" height="100" style="margin:5px" @onclick="@CmdButtonClick">delete selected</button>
 
-
+<button class="btn btn-primary" width="400" height="100" style="margin:5px; margin-left:10px" @onclick="@CmdPrintClick">print</button>
 
 
 <br />
@@ -15,5 +15,5 @@
 
 <br />
 <br />
-<button class="btn btn-primary" width="400" height="100" style="margin:5px" @onclick="@CmdPrintClick">print</button>
+
 
