--- a/LupusaBlazorDemos/Shared/NavMenu.razor
+++ b/LupusaBlazorDemos/Shared/NavMenu.razor
@@ -132,6 +132,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> LoadFile
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="PageBeep">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Beep
+            </NavLink>
+        </li>
     </ul>
 </div>
 
