--- a/LupusaBlazorDemos/Demos/PageTreeView.razor
+++ b/LupusaBlazorDemos/Demos/PageTreeView.razor
@@ -3,27 +3,32 @@
 
     <style>
         .trdiv {
+            display: flex;
             user-select: none;
             position: relative;
+            align-items: center;
+        }
+
+        .hhh {
             height: 4vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .trimg {
-            width: 20px;
-            height: 20px;
+            width: 2.5vh;
+            height: 2.5vh;
             user-select: none;
-            position: absolute;
-            top: 0;
             cursor: pointer;
-            margin: 0;
+            margin-left: 0.5vh;
+            margin-right: 0.5vh;
         }
 
         .trsp {
             user-select: none;
-            position: absolute;
-            top: 0;
             cursor: pointer;
-            margin: 5px;
+            margin-left: 0.5vh;
         }
 
         .trspsel {
