--- a/LupusaBlazorDemos/_Imports.razor
+++ b/LupusaBlazorDemos/_Imports.razor
@@ -1,7 +1,10 @@
 ﻿@using System.Net.Http
+@using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using LupusaBlazorDemos
 @using LupusaBlazorDemos.Shared
@@ -10,6 +13,9 @@
 @using BlazorCounterHelper
 @using BlazorWindowHelper
 @using System.Reflection;
+
+
+
 
 
 @using BlazorWebWorkerHelper.WsClasses
