--- a/LupusaBlazorDemos/Shared/MainLayout.razor
+++ b/LupusaBlazorDemos/Shared/MainLayout.razor
@@ -1,25 +1,28 @@
 @inherits LayoutComponentBase
 
+<div class="page">
+    @if (LBDLocalData.IsLayoutVisible)
+    {
 
-@if (LBDLocalData.IsLayoutVisible)
-{
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <div class="main">
-        <div class="top-row px-4">
-            <HeaderLinks RepoName="LupusaBlazorDemos"></HeaderLinks>
+        <div class="sidebar">
+            <NavMenu />
         </div>
 
-        <div class="content px-4">
+        <div class="main">
+            <div class="top-row px-4">
+                <HeaderLinks RepoName="LupusaBlazorDemos"></HeaderLinks>
+            </div>
+
+            <div class="content px-4">
+                @Body
+            </div>
+        </div>
+
+    }
+    else
+    {
+        <div style="width:100%;background-color:azure;">
             @Body
         </div>
-    </div>
-}
-else
-{
-<div style="width:100%;background-color:azure;">
-    @Body
+    }
 </div>
-}
